--- a/.github/workflows/azure_runner.yml
+++ b/.github/workflows/azure_runner.yml
@@ -18,12 +18,14 @@ jobs:
         python-version: '3.10'
 
     - name: Install Dependencies
-      run: pip install -r requirements.txt
+      run: |
+        pip install -r requirements.txt
+        pip install nbconvert
 
-    - name: Access Azure Blob Storage
+    - name: Run Colab Notebook
       env:
         AZURE_STORAGE_ACCOUNT: ${{ secrets.AZURE_STORAGE_ACCOUNT }}
         AZURE_STORAGE_KEY: ${{ secrets.AZURE_STORAGE_KEY }}
         AZURE_CONTAINER_NAME: ${{ secrets.AZURE_CONTAINER_NAME }}
       run: |
-        python azure_config.py
+        jupyter nbconvert --to notebook --execute --inplace your_notebook_name.ipynb
